faces missing with GPU render #46143

Closed
opened 2015-09-17 13:49:59 +02:00 by Bubble Bobble · 5 comments

System Information
Windows 7, NVIDIA Quadro 1000m

Blender Version
Broken: 2.75 daily build 9-17-2015 (hash: 9744c8c)
Worked: 2.75, 2.75a

Short description of error
Preview box rendered with CPU renders with correct result, but switching to GPU renders with faces missing. I believe this was broken on CPU also at one point (9-04-2015 daily build, hash: ac51e2f) and it seems to have been fixed for CPU, but the problem persists on GPU.

CPU result: http://i.imgur.com/OhDkn9V.png
GPU result: http://i.imgur.com/L2AiyzW.png

Exact steps for others to reproduce the error

  1. Open this blend file: http://www.pasteall.org/blend/38068
  2. Render with CPU to see correct result
  3. Switch to GPU render to see incorrect result
**System Information** Windows 7, NVIDIA Quadro 1000m **Blender Version** Broken: 2.75 daily build 9-17-2015 (hash: 9744c8c) Worked: 2.75, 2.75a **Short description of error** Preview box rendered with CPU renders with correct result, but switching to GPU renders with faces missing. I believe this was broken on CPU also at one point (9-04-2015 daily build, hash: ac51e2f) and it seems to have been fixed for CPU, but the problem persists on GPU. CPU result: http://i.imgur.com/OhDkn9V.png GPU result: http://i.imgur.com/L2AiyzW.png **Exact steps for others to reproduce the error** 1) Open this blend file: http://www.pasteall.org/blend/38068 2) Render with CPU to see correct result 3) Switch to GPU render to see incorrect result
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JimCantley

Added subscriber: @JimCantley

This issue was referenced by 3cee28ebf3

This issue was referenced by 3cee28ebf3c808e511255095aa68d24305721198

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@ec264b0e15

This issue was referenced by blender/cycles@ec264b0e15ee4896478a178c839021b589e39db7
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46143
No description provided.